--- a/data/projects.json
+++ b/data/projects.json
@@ -10,7 +10,7 @@
         "link": ""
     },
      {
-        "title": "7 & 7",
+        "title": "7th Hour",
         "description": "Afterwork workshop and lecture concept developed by 7 to inspire ouselves and others. 7 minutes of telling your story.",
         "images": [
             "7.jpg",
